[project]
name = "goodpath-api"
version = "0.1.0"
description = "Goodpath API Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.29",
    "geoalchemy2>=0.14.7",
    "alembic>=1.13.1",
    "psycopg[binary]>=3.1.18",
    "celery>=5.3.6",
    "redis>=5.0.3",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "argon2-cffi>=23.1.0",
    "python-multipart>=0.0.9",
    "pillow>=10.3.0",
    "pillow-heif>=0.16.0",
    "watchdog>=4.0.0",
    "blurhash-python>=1.2.2",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.3.5",
    "mypy>=1.9.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.setuptools.packages.find]
include = ["app*"]
